Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67559

Setting a reusable delegate for a Menu (QML type) doesn't work

    XMLWordPrintable

Details

    • d5cb26bc56a3b6f6e99c88654d4f7a65f43551ac d923dd467c1aeb3e195a09949b04862084002f88

    Description

      Steps to reproduce:

      • run the sample attached
      • open the menus
        EXPECTED: both menus should have colorful items
        ACTUAL: the reusable delegate has no effect -> the items of the first menu are white

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mitch_curtis Mitch Curtis
            risto.sipola Risto Sipola
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes