tests/auto/qquickmenu/qquickmenu.pro
@@ -1,5 +1,6 @@
 CONFIG += testcase
 TARGET = tst_qquickmenu
+HEADERS += ../shared/menuutil.h
 SOURCES += tst_qquickmenu.cpp
 
 macos:CONFIG -= app_bundle
